test/tests/operators/to_google_secops/ingestion_max_request_size.txt
error: `max_request_size` must be at most 1MB for `api="ingestion"`
 --> tests/operators/to_google_secops/ingestion_max_request_size.tql:7:35
  |
7 |   log_text=text, max_request_size=1000001,
  |                                   ^^^^^^^ 
  |
